--- a/ClearAsset/Controllers/Login/Login.storyboard
+++ b/ClearAsset/Controllers/Login/Login.storyboard
@@ -34,13 +34,13 @@
                                 <rect key="frame" x="0.0" y="136.66666666666663" width="428" height="250"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7r-4H-gf5">
-                                        <rect key="frame" x="16" y="8" width="142.66666666666666" height="68.333333333333329"/>
+                                        <rect key="frame" x="16" y="8.0000000000000036" width="138.33333333333334" height="58.333333333333343"/>
                                         <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="50"/>
                                         <color key="textColor" name="appBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdG-Zp-jcp">
-                                        <rect key="frame" x="16" y="92.333333333333343" width="396" height="4"/>
+                                        <rect key="frame" x="16" y="82.333333333333343" width="396" height="4"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="84K-xp-TdM">
                                                 <rect key="frame" x="198" y="0.0" width="198" height="4"/>
@@ -95,7 +95,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in with Google" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cV7-O7-pHb">
-                                                        <rect key="frame" x="43.000000000000014" y="10.333333333333316" width="214.33333333333337" height="28.666666666666671"/>
+                                                        <rect key="frame" x="43.000000000000014" y="12.333333333333316" width="214.33333333333337" height="24.666666666666671"/>
                                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="21"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -139,13 +139,13 @@
                                 <rect key="frame" x="0.0" y="386.66666666666674" width="428" height="352"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjC-Vk-dC8">
-                                        <rect key="frame" x="24.000000000000007" y="15.999999999999998" width="110.66666666666669" height="23.333333333333329"/>
+                                        <rect key="frame" x="24" y="16" width="109" height="20"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="17"/>
                                         <color key="textColor" name="appGray"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Uge-q4-ORy">
-                                        <rect key="frame" x="16" y="55.333333333333307" width="396" height="70.333333333333314"/>
+                                        <rect key="frame" x="16" y="51.999999999999993" width="396" height="70.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -161,13 +161,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZI-y5-3ow">
-                                        <rect key="frame" x="24" y="145.66666666666669" width="75.333333333333329" height="23.333333333333343"/>
+                                        <rect key="frame" x="24" y="141.99999999999994" width="75.333333333333329" height="20"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="17"/>
                                         <color key="textColor" name="appGray"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sra-fM-hG7">
-                                        <rect key="frame" x="16" y="184.99999999999994" width="396" height="70.333333333333314"/>
+                                        <rect key="frame" x="16" y="177.99999999999994" width="396" height="70.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -183,7 +183,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MtI-8i-LKb">
-                                        <rect key="frame" x="279" y="263.33333333333331" width="129" height="34"/>
+                                        <rect key="frame" x="277" y="256.33333333333331" width="131" height="31"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="16"/>
                                         <state key="normal" title="Forget Password?">
                                             <color key="titleColor" name="appLightBlue"/>
@@ -238,7 +238,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2Y-K9-REO">
-                                        <rect key="frame" x="145.66666666666666" y="104.66666666666674" width="136.99999999999997" height="33"/>
+                                        <rect key="frame" x="143" y="104.66666666666674" width="142" height="30"/>
                                         <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                         <state key="normal" title="No account? Sign up">
                                             <color key="titleColor" name="appBlue"/>
